--- a/tools/interactive_infer.ipynb
+++ b/tools/interactive_infer.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/DISK1/home/rh_xu30/miniconda3/envs/infinity/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/root/miniconda3/envs/infinity/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/DISK1/home/rh_xu30/miniconda3/envs/infinity/lib/python3.10/site-packages/timm/models/layers/__init__.py:48: FutureWarning: Importing from timm.models.layers is deprecated, please import via timm.layers\n",
+      "/root/miniconda3/envs/infinity/lib/python3.10/site-packages/pydantic/_internal/_generate_schema.py:2249: UnsupportedFieldAttributeWarning: The 'repr' attribute with value False was provided to the `Field()` function, which has no effect in the context it was used. 'repr' is field-specific metadata, and can only be attached to a model field using `Annotated` metadata or by assignment. This may have happened because an `Annotated` type alias using the `type` statement was used, or if the `Field()` function was attached to a single member of a union type.\n",
+      "  warnings.warn(\n",
+      "/root/miniconda3/envs/infinity/lib/python3.10/site-packages/pydantic/_internal/_generate_schema.py:2249: UnsupportedFieldAttributeWarning: The 'frozen' attribute with value True was provided to the `Field()` function, which has no effect in the context it was used. 'frozen' is field-specific metadata, and can only be attached to a model field using `Annotated` metadata or by assignment. This may have happened because an `Annotated` type alias using the `type` statement was used, or if the `Field()` function was attached to a single member of a union type.\n",
+      "  warnings.warn(\n",
+      "/root/miniconda3/envs/infinity/lib/python3.10/site-packages/timm/models/layers/__init__.py:48: FutureWarning: Importing from timm.models.layers is deprecated, please import via timm.layers\n",
       "  warnings.warn(f\"Importing from {__name__} is deprecated, please import via timm.layers\", FutureWarning)\n"
      ]
     },
@@ -19,8 +23,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python: /DISK1/home/rh_xu30/miniconda3/envs/infinity/bin/python\n",
-      "cwd: /DISK1/home/rh_xu30/Infinity/tools\n",
+      "python: /root/miniconda3/envs/infinity/bin/python\n",
+      "cwd: /root/autodl-tmp/Infinity_sparse/tools\n",
       "torch version: 2.9.0+cu126\n",
       "cuda: 12.6 is_available: True\n"
      ]
@@ -29,7 +33,7 @@
    "source": [
     "import random\n",
     "import torch\n",
-    "torch.cuda.set_device(0)\n",
+    "#torch.cuda.set_device(0)\n",
     "import cv2\n",
     "import numpy as np\n",
     "from run_infinity import *\n",
@@ -40,9 +44,9 @@
     "print(\"cuda:\", torch.version.cuda, \"is_available:\", torch.cuda.is_available())\n",
     "\n",
     "\n",
-    "model_path='/DISK1/home/yx_zhao31/Infinity/Predata/infinity_2b_reg.pth'\n",
-    "vae_path='/DISK1/home/yx_zhao31/Infinity/Predata/infinity_vae_d32reg.pth'\n",
-    "text_encoder_ckpt = '/DISK1/home/yx_zhao31/Infinity/Predata/flan-t5-xl'\n",
+    "model_path='/root/autodl-tmp/Predata/infinity_2b_reg.pth'\n",
+    "vae_path='/root/autodl-tmp/Predata/infinity_vae_d32reg.pth'\n",
+    "text_encoder_ckpt = '/root/autodl-tmp/Predata/flan-t5-xl'\n",
     "args=argparse.Namespace(\n",
     "    pn='1M',\n",
     "    model_path=model_path,\n",
@@ -67,22 +71,16 @@
     "    bf16=1,\n",
     "    save_file='tmp.jpg',\n",
     "    customized_flash_attn=False,\n",
-    "    sparsity_ratio=0.75\n",
+    "    sparsity_ratio_sa=0.6,\n",
+    "    sparsity_ratio_ca=None,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`torch_dtype` is deprecated! Use `dtype` instead!\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -94,16 +92,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:00<00:00,  6.01it/s]\n"
+      "`torch_dtype` is deprecated! Use `dtype` instead!\n",
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:00<00:00,  7.47it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model_path: /DISK1/home/yx_zhao31/Infinity/Predata/infinity_2b_reg.pth, slim_model_path: /DISK1/home/yx_zhao31/Infinity/Predata/infinity_2b_reg.pth\n",
-      "local_model_path: /dev/shm/tmp/_DISK1_home_yx_zhao31_Infinity_Predata_infinity_2b_reg.pth, local_slim_model_path: /dev/shm/tmp/_DISK1_home_yx_zhao31_Infinity_Predata_infinity_2b_reg.pth\n",
-      "load checkpoint from /dev/shm/tmp/_DISK1_home_yx_zhao31_Infinity_Predata_infinity_2b_reg.pth\n",
+      "model_path: /root/autodl-tmp/Predata/infinity_2b_reg.pth, slim_model_path: /root/autodl-tmp/Predata/infinity_2b_reg.pth\n",
+      "local_model_path: /dev/shm/tmp/_root_autodl-tmp_Predata_infinity_2b_reg.pth, local_slim_model_path: /dev/shm/tmp/_root_autodl-tmp_Predata_infinity_2b_reg.pth\n",
+      "load checkpoint from /dev/shm/tmp/_root_autodl-tmp_Predata_infinity_2b_reg.pth\n",
       "[Loading Infinity]\n",
       "self.codebook_dim: 32, self.add_lvl_embeding_only_first_block: 1,             self.use_bit_label: 1, self.rope2d_each_sa_layer: 1, self.rope2d_normalized_by_hw: 2\n",
       "self.num_blocks_in_a_chunk=4, depth=32, block_chunks=8\n",
@@ -157,13 +156,13 @@
       "          shared_aln=True, fused_norm=True, ca_gamma=1\n",
       "          (drop_path): Identity()\n",
       "          (sa): SparseSelfAttention(\n",
-      "            using_flash=False, tau=1, cos_attn=True, sparsity_ratio=0.75\n",
+      "            using_flash=False, tau=1, cos_attn=True, sparsity_ratio=0.6\n",
       "            (mat_qkv): Linear(in_features=2048, out_features=6144, bias=False)\n",
       "            (proj): Linear(in_features=2048, out_features=2048, bias=True)\n",
       "            (proj_drop): Identity()\n",
       "          )\n",
-      "          (ca): SparseCrossAttention(\n",
-      "            Cq=2048, Ckv=2048, cos_attn=False, sparsity_ratio=0.75\n",
+      "          (ca): CrossAttention(\n",
+      "            Cq=2048, Ckv=2048, cos_attn=False\n",
       "            (mat_q): Linear(in_features=2048, out_features=2048, bias=True)\n",
       "            (mat_kv): Linear(in_features=2048, out_features=4096, bias=False)\n",
       "            (proj): Linear(in_features=2048, out_features=2048, bias=True)\n",
@@ -183,13 +182,13 @@
       "          shared_aln=True, fused_norm=True, ca_gamma=1\n",
       "          (drop_path): DropPath(...)\n",
       "          (sa): SparseSelfAttention(\n",
-      "            using_flash=False, tau=1, cos_attn=True, sparsity_ratio=0.75\n",
+      "            using_flash=False, tau=1, cos_attn=True, sparsity_ratio=0.6\n",
       "            (mat_qkv): Linear(in_features=2048, out_features=6144, bias=False)\n",
       "            (proj): Linear(in_features=2048, out_features=2048, bias=True)\n",
       "            (proj_drop): Identity()\n",
       "          )\n",
-      "          (ca): SparseCrossAttention(\n",
-      "            Cq=2048, Ckv=2048, cos_attn=False, sparsity_ratio=0.75\n",
+      "          (ca): CrossAttention(\n",
+      "            Cq=2048, Ckv=2048, cos_attn=False\n",
       "            (mat_q): Linear(in_features=2048, out_features=2048, bias=True)\n",
       "            (mat_kv): Linear(in_features=2048, out_features=4096, bias=False)\n",
       "            (proj): Linear(in_features=2048, out_features=2048, bias=True)\n",
@@ -213,13 +212,13 @@
       "          shared_aln=True, fused_norm=True, ca_gamma=1\n",
       "          (drop_path): DropPath(...)\n",
       "          (sa): SparseSelfAttention(\n",
-      "            using_flash=False, tau=1, cos_attn=True, sparsity_ratio=0.75\n",
+      "            using_flash=False, tau=1, cos_attn=True, sparsity_ratio=0.6\n",
       "            (mat_qkv): Linear(in_features=2048, out_features=6144, bias=False)\n",
       "            (proj): Linear(in_features=2048, out_features=2048, bias=True)\n",
       "            (proj_drop): Identity()\n",
       "          )\n",
-      "          (ca): SparseCrossAttention(\n",
-      "            Cq=2048, Ckv=2048, cos_attn=False, sparsity_ratio=0.75\n",
+      "          (ca): CrossAttention(\n",
+      "            Cq=2048, Ckv=2048, cos_attn=False\n",
       "            (mat_q): Linear(in_features=2048, out_features=2048, bias=True)\n",
       "            (mat_kv): Linear(in_features=2048, out_features=4096, bias=False)\n",
       "            (proj): Linear(in_features=2048, out_features=2048, bias=True)\n",
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -270,12 +269,8 @@
      "text": [
       "prompt=A beautiful Chinese woman with graceful features, close-up portrait, long flowing black hair, wearing a traditional silk cheongsam delicately embroidered with floral patterns, face softly illuminated by ambient light, serene expression\n",
       "cfg: [3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3], tau: [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]\n",
-      "[INFO] Sparsity mask collection enabled\n",
-      "[INFO] Sparsity masks saved to ./sparsity_masks/mask_data.pkl\n",
-      "       Total stages: 416\n",
-      "       Total blocks: 416\n",
-      "cost: 1440.7299330234528, infinity cost=1439.2918915748596\n",
-      "Save to /DISK1/home/rh_xu30/Infinity/tools/ipynb_tmp.jpg\n"
+      "cost: 1166.7478094100952, infinity cost=1166.0599780082703\n",
+      "Save to /root/autodl-tmp/Infinity_sparse/tools/ipynb_tmp.jpg\n"
      ]
     }
    ],
