--- a/tools/interactive_infer.ipynb
+++ b/tools/interactive_infer.ipynb
@@ -103,7 +103,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:00<00:00,  8.88it/s]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:00<00:00,  7.13it/s]\n"
      ]
     },
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -279,50 +279,72 @@
      "text": [
       "prompt=A beautiful Chinese woman with graceful features, close-up portrait, long flowing black hair, wearing a traditional silk cheongsam delicately embroidered with floral patterns, face softly illuminated by ambient light, serene expression\n",
       "cfg: [3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3], tau: [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]\n",
-      "cost: 32.312273025512695, infinity cost=32.28408360481262\n",
-      "Save to /root/autodl-tmp/Infinity_sparse/tools/ipynb_tmp.jpg\n"
+      "cost: 43.61512351036072, infinity cost=43.23179054260254\n",
+      "Save to /root/autodl-tmp/Infinity_sparse/tools/ipynb_tmp_0.jpg\n",
+      "prompt=a cat holds a sign with the text 'Diffusion is dead'\n",
+      "cfg: [3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3], tau: [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]\n",
+      "cost: 29.552003383636475, infinity cost=29.52689218521118\n",
+      "Save to /root/autodl-tmp/Infinity_sparse/tools/ipynb_tmp_1.jpg\n",
+      "prompt=a Chinese model is sitting on a train, magazine cover, clothes made of plastic, photorealistic, futuristic style, gray and green light, movie lighting, 32K HD\n",
+      "cfg: [3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3], tau: [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]\n",
+      "cost: 29.470239639282227, infinity cost=29.44465684890747\n",
+      "Save to /root/autodl-tmp/Infinity_sparse/tools/ipynb_tmp_2.jpg\n",
+      "prompt=A group of students in a class\n",
+      "cfg: [3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3], tau: [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]\n",
+      "cost: 29.476492643356323, infinity cost=29.451484441757202\n",
+      "Save to /root/autodl-tmp/Infinity_sparse/tools/ipynb_tmp_3.jpg\n",
+      "prompt=A blue race car bed sitting next to a fake fuel pump\n",
+      "cfg: [3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3], tau: [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]\n",
+      "cost: 29.475610733032227, infinity cost=29.450591325759888\n",
+      "Save to /root/autodl-tmp/Infinity_sparse/tools/ipynb_tmp_4.jpg\n"
      ]
     }
    ],
    "source": [
-    "prompt = \"\"\"A beautiful Chinese woman with graceful features, close-up portrait, long flowing black hair, wearing a traditional silk cheongsam delicately embroidered with floral patterns, face softly illuminated by ambient light, serene expression\"\"\"\n",
+    "prompts = [\"A beautiful Chinese woman with graceful features, close-up portrait, long flowing black hair, wearing a traditional silk cheongsam delicately embroidered with floral patterns, face softly illuminated by ambient light, serene expression\",\n",
+    "           \"a cat holds a sign with the text 'Diffusion is dead'\",\n",
+    "           \"a Chinese model is sitting on a train, magazine cover, clothes made of plastic, photorealistic, futuristic style, gray and green light, movie lighting, 32K HD\",\n",
+    "           \"A group of students in a class\",\n",
+    "           \"A blue race car bed sitting next to a fake fuel pump\"]\n",
     "cfg = 3\n",
     "tau = 0.5\n",
     "h_div_w = 1/1 # aspect ratio, height:width\n",
     "seed = random.randint(0, 10000)\n",
     "enable_positive_prompt=0\n",
+    "sparsity_mask_save_path='./sparsity_masks/mask_data.pkl'\n",
     "\n",
     "h_div_w_template_ = h_div_w_templates[np.argmin(np.abs(h_div_w_templates-h_div_w))]\n",
     "scale_schedule = dynamic_resolution_h_w[h_div_w_template_][args.pn]['scales']\n",
     "scale_schedule = [(1, h, w) for (_, h, w) in scale_schedule]\n",
-    "generated_image = gen_one_img(\n",
-    "    infinity,\n",
-    "    vae,\n",
-    "    text_tokenizer,\n",
-    "    text_encoder,\n",
-    "    prompt,\n",
-    "    g_seed=seed,\n",
-    "    gt_leak=0,\n",
-    "    gt_ls_Bl=None,\n",
-    "    cfg_list=cfg,\n",
-    "    tau_list=tau,\n",
-    "    scale_schedule=scale_schedule,\n",
-    "    cfg_insertion_layer=[args.cfg_insertion_layer],\n",
-    "    vae_type=args.vae_type,\n",
-    "    sampling_per_bits=args.sampling_per_bits,\n",
-    "    enable_positive_prompt=enable_positive_prompt,\n",
-    "    save_sparsity_masks=False,\n",
-    "    sparsity_mask_save_path='./sparsity_masks/mask_data.pkl'\n",
-    ")\n",
-    "args.save_file = 'ipynb_tmp.jpg'\n",
-    "os.makedirs(osp.dirname(osp.abspath(args.save_file)), exist_ok=True)\n",
-    "cv2.imwrite(args.save_file, generated_image.cpu().numpy())\n",
-    "print(f'Save to {osp.abspath(args.save_file)}')"
+    "for i,prompt in enumerate(prompts):\n",
+    "    generated_image = gen_one_img(\n",
+    "        infinity,\n",
+    "        vae,\n",
+    "        text_tokenizer,\n",
+    "        text_encoder,\n",
+    "        prompt,\n",
+    "        g_seed=seed,\n",
+    "        gt_leak=0,\n",
+    "        gt_ls_Bl=None,\n",
+    "        cfg_list=cfg,\n",
+    "        tau_list=tau,\n",
+    "        scale_schedule=scale_schedule,\n",
+    "        cfg_insertion_layer=[args.cfg_insertion_layer],\n",
+    "        vae_type=args.vae_type,\n",
+    "        sampling_per_bits=args.sampling_per_bits,\n",
+    "        enable_positive_prompt=enable_positive_prompt,\n",
+    "        save_sparsity_masks=False,\n",
+    "        sparsity_mask_save_path=sparsity_mask_save_path\n",
+    "    )\n",
+    "    args.save_file = f'ipynb_tmp_{i}.jpg'\n",
+    "    os.makedirs(osp.dirname(osp.abspath(args.save_file)), exist_ok=True)\n",
+    "    cv2.imwrite(args.save_file, generated_image.cpu().numpy())\n",
+    "    print(f'Save to {osp.abspath(args.save_file)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +655,7 @@
    ],
    "source": [
     "from mask_analyzer import *\n",
-    "analyzer = SparsityMaskAnalyzer(\"./sparsity_masks/mask_data.pkl\")\n",
+    "analyzer = SparsityMaskAnalyzer(sparsity_mask_save_path)\n",
     "analyzer.generate_comprehensive_report()"
    ]
   },
